<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegistrationScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liquid_cheese_background"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner_background"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/yellow"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/etName_RS"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@color/input"
            android:hint="@string/hintName"
            android:paddingLeft="10dp"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/etEmail_RS"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@color/input"
            android:hint="@string/hintEmail"
            android:paddingLeft="10dp"
            android:layout_marginTop="30dp"/>
        <EditText
            android:id="@+id/etNumber_RS"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@color/input"
            android:hint="@string/hintNumber"
            android:paddingLeft="10dp"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/etPassword_RS"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@color/input"
            android:hint="@string/hintPassword"
            android:paddingLeft="10dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnRegister_RS"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:background="@drawable/button"
            android:text="@string/btnRegister"
            android:textSize="20sp"
            android:layout_marginTop="60dp"/>



    </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>