<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liquid_cheese_background"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:fillViewport="true"
        android:background="@drawable/round_corner_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:textColor="@color/yellow"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail_LS"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@color/input"
                android:hint="@string/hintEmail"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/etPassword_LS"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@color/input"
                android:hint="@string/hintPassword"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/btnLogin_LS"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button"
                android:text="@string/btnLogin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvRegister_LS"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/warning_Register"
                android:textColor="@color/yellow"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvForgotPass_LS"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/forgotPassword"
                android:textColor="@color/yellow"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

