<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_LI"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/liquid_cheese_background"
    tools:context=".ListItemActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/round_corner_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/Title_IL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@color/input"
                android:hint="@string/hintTitle"
                android:paddingLeft="10dp"
                android:textColor="@color/yellow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/Task_LI"
                    android:layout_width="315dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/input"
                    android:hint="@string/hintTask"
                    android:paddingLeft="10dp"
                    android:textColor="@color/yellow" />

                <ImageView
                    android:id="@+id/ivPlus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="15dp"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItemAdded_LI"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_marginVertical="10dp"
                tools:listitem="@layout/rv_layout" />

            <Button
                android:id="@+id/btnCreate_LI"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/btnCreate" />

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>